--- a/.github/workflows/R6HKOnly.yml
+++ b/.github/workflows/R6HKOnly.yml
@@ -28,7 +28,7 @@ jobs:
         sudo apt-get install -y sing-box
     
     - name: Pull code from remote
-      run: git pull origin main --ff-only
+      run: gh repo clone HXHGTS/AzureIPGet
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
