--- a/.github/workflows/R6HKOnly.yml
+++ b/.github/workflows/R6HKOnly.yml
@@ -83,6 +83,6 @@ jobs:
           echo "Release $TAG_NAME already exists, deleting it."
           gh release delete "$TAG_NAME" --yes
         fi
-        gh release create "$TAG_NAME" --title "$TAG_NAME" --notes "Auto-generated release for $TAG_NAME" geoip-r6hkonly.srs
+        gh release create "$TAG_NAME" --title "$TAG_NAME" --notes "Auto-generated release for $TAG_NAME" geoip/geoip-r6hkonly.srs
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
