--- a/.github/workflows/R6HKOnly.yml
+++ b/.github/workflows/R6HKOnly.yml
@@ -40,13 +40,14 @@ jobs:
 
     - name: Push Files
       run: |
-        sudo mkdir -p geoip
-        sudo mv -f geoip-r6hkonly.srs geoip/geoip-r6hkonly.srs
-        sudo chown -R $USER:$USER geoip
-        sudo chmod -R 777 geoip
+        sudo mkdir -p NewRelease/geoip
+        sudo mv -f geoip-r6hkonly.srs NewRelease/geoip/geoip-r6hkonly.srs
+        sudo chown -R $USER:$USER NewRelease
+        sudo chmod -R 777 NewRelease
         git config --global user.email "${{ secrets.GH_EMAIL }}"
         git config --global user.name "github-actions[bot]"
-        sudo git add geoip/*.srs
+        sudo git add NewRelease/geoip/*.srs
+        git fetch
         if git diff-index --quiet HEAD --; then
           echo "No changes to commit"
         else
@@ -83,6 +84,6 @@ jobs:
           echo "Release $TAG_NAME already exists, deleting it."
           gh release delete "$TAG_NAME" --yes
         fi
-        gh release create "$TAG_NAME" --title "$TAG_NAME" --notes "Auto-generated release for $TAG_NAME" geoip/geoip-r6hkonly.srs
+        gh release create "$TAG_NAME" --title "$TAG_NAME" --notes "Auto-generated release for $TAG_NAME" NewRelease/geoip/geoip-r6hkonly.srs
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
