--- a/.github/workflows/R6HKOnly.yml
+++ b/.github/workflows/R6HKOnly.yml
@@ -46,14 +46,13 @@ jobs:
         sudo chmod -R 777 NewRelease
         git config --global user.email "${{ secrets.GH_EMAIL }}"
         git config --global user.name "github-actions[bot]"
-        cd NewRelease
-        sudo git add geoip/*.srs
+        sudo git add NewRelease/geoip/*.srs
         git fetch
         if git diff-index --quiet HEAD --; then
           echo "No changes to commit"
         else
           git commit -m "Auto Compile telegram geoip source file"
-          git push --force
+          git push --force origin main:geoip
         fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -81,7 +80,7 @@ jobs:
       run: |
         TAG_NAME=${{ steps.create_tag.outputs.TAG_NAME }}
         RELEASE_ID=$(gh release view "$TAG_NAME" --json id --jq '.id' || echo "null")
-        if [ "$RELEASE_ID" != "null" ]; then
+        if [ "$RELEASE_ID" != "null" then
           echo "Release $TAG_NAME already exists, deleting it."
           gh release delete "$TAG_NAME" --yes
         fi
