--- a/.github/workflows/R6HKOnly.yml
+++ b/.github/workflows/R6HKOnly.yml
@@ -46,8 +46,7 @@ jobs:
         sudo chmod -R 777 NewRelease
         git config --global user.email "${{ secrets.GH_EMAIL }}"
         git config --global user.name "github-actions[bot]"
-        cd NewRelease
-        sudo git add geoip/*.srs
+        sudo git add NewRelease/geoip/*.srs
         git fetch
         if ! git diff --quiet origin/main:geoip -- NewRelease/geoip/; then
           echo "No changes to commit"
