--- a/.github/workflows/ClientRule.yml
+++ b/.github/workflows/ClientRule.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Configure Git User
         run: |
-          git config --global user.email "${{ secrets.GH_EMAIL }}"
-          git config --global user.name "github-actions[bot]"
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
 
       - name: Prepare Data Folder
         run: |
@@ -44,8 +44,9 @@ jobs:
 
       - name: Push Files
         run: |
+          echo "Force updating repository with local content. . ."
+          git checkout -b Release
           sudo git add data
-          echo "Force updating repository with local content."
           git commit -m "Update Azure ip data"
           git push --force origin Release
         env:
