--- a/.github/workflows/R6HKOnly.yml
+++ b/.github/workflows/R6HKOnly.yml
@@ -46,8 +46,8 @@ jobs:
         sudo mv -f geoip-r6hkonly.srs geoip/geoip-r6hkonly.srs
         sudo chown -R $USER:$USER geoip
         sudo chmod -R 777 geoip
-        git config --global user.email "${{ secrets.GH_EMAIL }}"
-        git config --global user.name "github-actions[bot]"
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@github.com'
         sudo git add geoip/*.srs
         git commit -m "Auto Compile telegram geoip source file"
         git push --force origin Release
