--- a/.github/workflows/R6HKOnly.yml
+++ b/.github/workflows/R6HKOnly.yml
@@ -45,11 +45,14 @@ jobs:
       run: |
         jq '.route | {version: 1, rules: [.rules[] | del(.outbound)]}' ./AzureIPGet/data/AzureIPBlock.json > AzureIPBlockRule.json
         sing-box rule-set compile --output geoip-r6hkonly.srs AzureIPBlockRule.json
-        rm -rf ./AzureIPGet AzureIPBlockRule.json
 
     - name: Compile mihomo mrs File
       run: |
         mihomo convert-ruleset ipcidr text ./AzureIPGet/data/ip.txt geoip-r6hkonly.mrs
+
+    - name: Clean
+      run: |
+        rm -rf ./AzureIPGet AzureIPBlockRule.json
 
     - name: Push Files
       run: |
