--- a/.github/workflows/R6HKOnly.yml
+++ b/.github/workflows/R6HKOnly.yml
@@ -60,6 +60,11 @@ jobs:
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
+        if git show-ref --verify --quiet refs/heads/Release; then
+          git checkout Release
+        else
+          git checkout -b Release
+        fi
         git add geoip/*.srs
         git add geoip/*.mrs
         git commit -m "Auto Compile telegram geoip source file"
