--- a/.github/workflows/R6HKOnly.yml
+++ b/.github/workflows/R6HKOnly.yml
@@ -2,7 +2,7 @@ name: Compile Rainbow Six Siege Asian Server filter geoip source file
 
 on:
   workflow_run:
-    workflows: [ClientRule]
+    workflows: [sing-box RainbowSix ip block rule]
     types:
       - completed
   schedule:
