--- a/data/BiliPCDNHosts.yml
+++ b/data/BiliPCDNHosts.yml
@@ -3,4 +3,5 @@ payload:
   # - DOMAIN-SUFFIX,ahdohpiechei.com
   # - DOMAIN-SUFFIX,nexusedgeio.com
   - DOMAIN-SUFFIX,mcdn.bilivideo.cn
+  - DOMAIN-SUFFIX,edge.mountaintoys.cn
   - DOMAIN-REGEX,^[A-Za-z0-9.-]+-pcdn-[A-Za-z0-9.-]+\.biliapi\.net$
