--- a/data/BiliPCDNHosts.yml
+++ b/data/BiliPCDNHosts.yml
@@ -1,7 +1,7 @@
 payload:
-  - GEOSITE,snodehome
   # - DOMAIN-SUFFIX,ahdohpiechei.com
   # - DOMAIN-SUFFIX,nexusedgeio.com
   - DOMAIN-SUFFIX,mcdn.bilivideo.cn
   - DOMAIN-SUFFIX,edge.mountaintoys.cn
+  - DOMAIN,hw-edge.solseed.cn
   - DOMAIN-REGEX,^[A-Za-z0-9.-]+-pcdn-[A-Za-z0-9.-]+\.biliapi\.net$
