--- a/data/BiliPCDNHosts.yml
+++ b/data/BiliPCDNHosts.yml
@@ -6,3 +6,4 @@ payload:
   - DOMAIN,hw-edge.solseed.cn
   - DOMAIN-REGEX,^[A-Za-z0-9.-]+-pcdn-[A-Za-z0-9.-]+\.biliapi\.net$
   - DOMAIN,httpdns.bilivideo.com
+  - DOMAIN-SUFFIX,v1d.szbdyd.com
