--- a/data/BiliPCDNHosts.yml
+++ b/data/BiliPCDNHosts.yml
@@ -4,6 +4,7 @@ payload:
   - DOMAIN-SUFFIX,mcdn.bilivideo.cn
   - DOMAIN-SUFFIX,edge.mountaintoys.cn
   - DOMAIN,hw-edge.solseed.cn
+  - DOMAIN,ali-edge.solseed.cn
   - DOMAIN-REGEX,^[A-Za-z0-9.-]+-pcdn-[A-Za-z0-9.-]+\.biliapi\.net$
   - DOMAIN-SUFFIX,v1d.szbdyd.com
   - DOMAIN,httpdns.bilivideo.com
