--- a/data/BiliPCDNHosts.yml
+++ b/data/BiliPCDNHosts.yml
@@ -8,3 +8,8 @@ payload:
   - DOMAIN-REGEX,^[A-Za-z0-9.-]+-pcdn-[A-Za-z0-9.-]+\.biliapi\.net$
   - DOMAIN-SUFFIX,v1d.szbdyd.com
   - DOMAIN,httpdns.bilivideo.com
+  - IP-CIDR,203.119.206.8/32
+  - IP-CIDR,203.119.206.9/32
+  - IP-CIDR,203.119.238.194/32
+  - IP-CIDR,203.119.238.240/32
+  - IP-CIDR,203.119.204.80/32
