--- a/data/BiliPCDNHosts.yml
+++ b/data/BiliPCDNHosts.yml
@@ -1,16 +1,17 @@
 payload:
-  # - DOMAIN-SUFFIX,ahdohpiechei.com
-  # - DOMAIN-SUFFIX,nexusedgeio.com
+  - DOMAIN-SUFFIX,ahdohpiechei.com
+  - DOMAIN-SUFFIX,nexusedgeio.com
+  - DOMAIN,upos-sz-302kodo.bilivideo.com
   - DOMAIN-SUFFIX,mcdn.bilivideo.cn
   - DOMAIN-SUFFIX,edge.mountaintoys.cn
   - DOMAIN,hw-edge.solseed.cn
   - DOMAIN,ali-edge.solseed.cn
   - DOMAIN-REGEX,^[A-Za-z0-9.-]+-pcdn-[A-Za-z0-9.-]+\.biliapi\.net$
   - DOMAIN-SUFFIX,v1d.szbdyd.com
+  - DOMAIN,unet.quark.cn
   - DOMAIN,httpdns.bilivideo.com
   - IP-CIDR,203.119.206.8/32
   - IP-CIDR,203.119.206.9/32
   - IP-CIDR,203.119.238.194/32
   - IP-CIDR,203.119.238.240/32
   - IP-CIDR,203.119.204.80/32
-  - DOMAIN,unet.quark.cn
